src/styles/elements/_overlay.css
.overlay {
    --overlay-bg-color: var(--color-black-o-75);
    --overlay-position: fixed;
    --overlay-top: 0;
    --overlay-left: 0;
    --overlay-height: 100%;
    --overlay-width: 100%;
    --overlay-display: flex;
    --overlay-align-items: center;
    --overlay-justify-content: center;

    --overlay-infos-position: relative;
    --overlay-infos-display: flex;
    --overlay-infos-flex-direction: column;
    --overlay-infos-align-items: center;
    --overlay-infos-justify-content: center;
    --overlay-infos-gap: var(--spacing-l);
    --overlay-infos-padding: var(--spacing-l);
    --overlay-infos-shadow: var(--shadow-normal);
    --overlay-infos-border-radius: var(--border-radius-normal);
    --overlay-infos-bg-color: var(--color-bg);
    --overlay-infos-max-width: min(calc(100% - var(--spacing-xl)), 640px);

    --overlay-logo-height: var(--spacing-xxl);
    --overlay-logo-width: auto;
    --overlay-logo-object-fit: contain;

    --overlay-title-margin: 0;

    --overlay-buttons-display: flex;
    --overlay-buttons-align-items: center;
    --overlay-buttons-justify-content: center;
    --overlay-flex-direction: row;
    --overlay-button-flex-wrap: wrap;
    --overlay-buttons-gap: var(--spacing-normal);

    --overlay-warning-display: none;
    --overlay-warning-color: var(--color-warning);

    --overlay-close-button-position: absolute;
    --overlay-close-button-top: var(--spacing-s);
    --overlay-close-button-right: calc(var(--spacing-s) * -1);
    --overlay-close-button-bg-color: transparent;
    --overlay-close-button-border: none;

    --overlay-conclusion-margin: 0;

    background-color: var(--overlay-bg-color);
    position: var(--overlay-position);
    top: var(--overlay-top);
    left: var(--overlay-left);
    height: var(--overlay-height);
    width: var(--overlay-width);
    display: var(--overlay-display);
    align-items: var(--overlay-align-items);
    justify-content: var(--overlay-justify-content);
}

.overlay[warning-visible] {
    --overlay-buttons-display: none;
    --overlay-warning-display: block;
}

.overlay[overlay-theme="light"] {
    --overlay-bg-color: var(--color-white-o-75);
}

.overlay__infos {
    position: var(--overlay-infos-position);
    display: var(--overlay-infos-display);
    flex-direction: var(--overlay-infos-flex-direction);
    align-items: var(--overlay-infos-align-items);
    justify-content: var(--overlay-infos-justify-content);
    gap: var(--overlay-infos-gap);
    padding: var(--overlay-infos-padding);
    box-shadow: var(--overlay-infos-shadow);
    border-radius: var(--overlay-infos-border-radius);
    background-color: var(--overlay-infos-bg-color);
    max-width: var(--overlay-infos-max-width);
}

.overlay__logo {
    height: var(--overlay-logo-height);
    width: var(--overlay-logo-width);
    object-fit: var(--overlay-logo-object-fit);
}

.overlay__title {
    margin: var(--overlay-title-margin);
}

.overlay__buttons {
    display: var(--overlay-buttons-display);
    align-items: var(--overlay-buttons-align-items);
    justify-content: var(--overlay-buttons-justify-content);
    flex-flow: var(--overlay-flex-direction) var(--overlay-button-flex-wrap);
    gap: var(--overlay-buttons-gap);
}

.overlay__warning {
    display: var(--overlay-warning-display);
    color: var(--overlay-warning-color);
}

.overlay__close-button {
    position: var(--overlay-close-button-position);
    top: var(--overlay-close-button-top);
    right: var(--overlay-close-button-right);
    background-color: var(--overlay-close-button-bg-color);
    border: var(--overlay-close-button-border);
}

.overlay__conclusion {
    margin: var(--overlay-conclusion-margin);
}

@media (hover: hover) {
    .overlay__close-button:hover .icon {
        --icon-color: var(--color-primary);
    }
}

